fix collapse when header text is very large

--- a/source/assets/stylesheets/locastyle/modules/_collapse.sass
+++ b/source/assets/stylesheets/locastyle/modules/_collapse.sass
@@ -28,7 +28,7 @@
 
 .ls-collapse-header
   display: block
-  padding: 10px
+  padding: 10px 35px 10px 10px
   cursor: pointer
   position: relative
 
